Content quality pass: ASCII→Mermaid, explanations, sidecar, ads.txt
- New: Sidecar pattern post (1,012 lines)
- New: ads.txt for AdSense verification
- Restore AdSense ID to ca-pub-7225106491387870
- Java 8 posts: ASCII art removed, Mermaid diagrams added,
  극한 시나리오 + 실무 실수 sections added
- Kafka 6 posts: ASCII boxes → Mermaid, 비유/시나리오 added
- Frontend 2 posts: 왜 중요한가/비유/시나리오 added
- LocalCache: ASCII art → Mermaid diagrams

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>